--- a/src/app/style.css
+++ b/src/app/style.css
@@ -12,10 +12,9 @@ body{
     width: 100%;
     border-bottom: solid 3px darkgreen;
     overflow: hidden;
-    position: fixed; 
+    position: relative; 
     top: 0;
     left: 0;
-    z-index: 1000; 
 }
 
 .cabecalho a {
@@ -98,9 +97,3 @@ body{
     color: white;
 }
 
-
-@media(max-width: 690px){
-    .menu-toggle{
-        display: block;
-    }
-}
